--- a/Develop/package.json
+++ b/Develop/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.17.1",
+    "jest": "^26.6.3"
   }
 }
